Cleaned up general layout issues

--- a/src/pattern-manager.scss
+++ b/src/pattern-manager.scss
@@ -1,3 +1,7 @@
+#pattern-manager-app {
+	height: calc(100vh - var(--wp-admin--admin-bar--height) - 65px);
+}
+
 .pattern-manager__editor-sidebar {
 	overflow-y: auto;
 	padding: 1rem;
@@ -44,6 +48,8 @@
 	height: 100%;
 
 	.pattern-manager__pattern-browser {
+		height: 100%;
+		overflow-y: auto;
 		display: flex;
 		gap: 1rem;
 		box-sizing: border-box;
